<resources>
    
<!--  	MainMenuActivity Strings -->

    <string name="app_name">Map Journal</string>
    <string name="new_trip">New Trip</string>
    <string name="resume_trip">Resume Trip</string>	
    <string name="previous_trips">Previous Trips</string>
    <string name="menu_settings">Settings</string>
    <string name="title">Map Journal</string>
    
<!-- NewTripActivity Strings  -->
    <string name="new_trip_title">Enter a name for your trip</string>
	<string name="text_box_message">Trip name</string>
	<string name="submit">Submit</string>
	
<!--  Invalid name popup (NewTripActivity) -->
	<string name="invalid_text_alert">Please enter a valid name</string>
	<string name="dismiss">Close</string>
	
<!--  JournalEntryActivity strings -->

	<string name="text_edit_title">Edit your journal entry</string>
	<string name="cancel">Cancel</string>
	<string name="delete">Delete Point</string>
	
<!-- 	Used in addPointActivity, MapJournalMapActivity and MapTestItemizedOverlay -->
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">Map Journal</string>
    <string name="title_get_location">Check In!</string>

<!-- AddPointActivity button/text box strings -->
    <string name="add_name">Location Name</string>
    <string name="add_notes">Write Notes (optional)</string>
    <string name="add_point">Add Point</string>
    <string name="take_picture">Take a Picture</string>
    <string name="take_video">Take a Video</string>
	<string name="album_name">MapJournal</string>
	<string name="cannot">Feature does not work on this device</string>
	
<!-- Menu bar titles -->
	<string name="main_menu_menu_bar">Map Journal</string>    
	<string name="new_trip_menu_bar">Create a New Trip</string>
	<string name="editor_menu_bar">View/Edit Notes</string>
	<string name="resume_menu_bar">Resume trip</string>
	<string name="previous_menu_bar">View Previous Trips</string>
	<string name="add_point_menu_bar">Check In</string>
	
</resources>

