<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:padding="16dip"
    android:title="@string/new_trip_menu_bar">
    
   <TextView 	android:id="@+id/new_trip_title"
				android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_centerHorizontal="true"
	            android:text="@string/new_trip_title"
	            android:textSize="@dimen/font_medium"
	            android:textColor="@color/gray" />
    
    <EditText	android:id="@+id/text_box"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:layout_centerHorizontal="true"
        		android:layout_below="@+id/new_trip_title"
        		android:layout_marginTop="32dp"
        		android:hint="@string/text_box_message" />
    
    <Button		android:id="@+id/submit_name"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:layout_centerHorizontal="true"
        		android:layout_below="@+id/text_box"
        		android:layout_marginTop="16dp"
        		android:onClick="submitName"
        		android:text="@string/submit" />


</RelativeLayout>